[DSTEW-1717] - Duplicate Claims Refactor